--- a/index.html
+++ b/index.html
@@ -429,10 +429,6 @@
       });
     }
   </script>
-  
-  
-  
-  
   <body>
     <header>
       <div class="Navbar">
@@ -473,7 +469,7 @@
     </header>
 
     <div class="container" id="home-section">
-      <img src="./images/green_land.jpg" width="100%" />
+      <img src="./Images/green_land.jpg" width="100%" />
       <div class="textbox">
         <div class="actualtext">
           <h1 class="EAM">EAM</h1>
@@ -506,35 +502,35 @@
         <h3>Discover our Expertise</h3>
         <div class="slideshow">
           <div class="placeholder">
-            <img src="/images/envir.jpeg" width=" alt="">
+            <img src="./Images/envir.jpeg" width=" alt="">
             <div class="description green">
               <h4>Environmental Impact Assessment and Management</h4>
               <span>Shaping a Sustainable Future</span>
             </div>
           </div>
           <div class="placeholder">
-            <img src="/images/renewable_energy_sources-e1551858601606.jpg" alt="" />
+            <img src="./Images/renewable_energy_sources-e1551858601606.jpg" alt="" />
             <div class="description black">
               <h4>Renewable Energies</h4>
               <span>Empowering the Future with Clean Energy</span>
             </div>
           </div>
           <div class="placeholder">
-            <img src="/images/offshore_platform.jpg" alt="" />
+            <img src="./Images/offshore_platform.jpg" alt="" />
             <div class="description green">
               <h4>Oil & Gas</h4>
               <span>Fueling Progress, Energizing the World</span>
             </div>
           </div>
           <div class="placeholder">
-            <img src="/images/607f4d330f7a43883cce1238_middle_harbor.jpg" alt="" />
+            <img src="./Images/607f4d330f7a43883cce1238_middle_harbor.jpg" alt="" />
             <div class="description black">
               <h4>Harbor & Terminal</h4>
               <span>Gateway to Global Connectivity</span>
             </div>
           </div>
           <div class="placeholder">
-            <img src="/images/health_risk_insurance.jpg" alt="" />
+            <img src="./Images/health_risk_insurance.jpg" alt="" />
             <div class="description green">
               <h4>Hazard & Safety</h4>
               <span>Safeguarding Lives, Securing Futures</span>
@@ -542,7 +538,7 @@
           </div>
 
           <div class="placeholder">
-            <img src="/images/consulting.jpg" alt="" />
+            <img src="./Images/consulting.jpg" alt="" />
             <div class="description black">
               <h4>Social and Stakeholder Engagement</h4>
               <span>Connecting Communities, Amplifying Voices</span>
@@ -558,7 +554,7 @@
             <div class="slide-track">
               <div class="slide">
                 <img
-                  src="/Images/Exxon_Mobil_Logo.svg.png"
+                  src="./Images/Exxon_Mobil_Logo.svg.png"
                   height="100"
                   width="100"
                   alt=""
@@ -566,7 +562,7 @@
               </div>
               <div class="slide">
                 <img
-                  src="/Images/images__2_-removebg-preview.png"
+                  src="./Images/images__2_-removebg-preview.png"
                   height="100"
                   width="100"
                   alt=""
@@ -574,7 +570,7 @@
               </div>
               <div class="slide">
                 <img
-                  src="/Images/Eni-Logo.wine.png"
+                  src="./Images/Eni-Logo.wine.png"
                   height="100"
                   width="100"
                   alt=""
@@ -582,7 +578,7 @@
               </div>
               <div class="slide">
                 <img
-                  src="/Images/Marathon_Oil_Logo.svg.png"
+                  src="./Images/Marathon_Oil_Logo.svg.png"
                   height="100"
                   width="100"
                   alt=""
@@ -590,7 +586,7 @@
               </div>
               <div class="slide">
                 <img
-                  src="/Images/petro-canada-logo-vector.png"
+                  src="./Images/petro-canada-logo-vector.png"
                   height="100"
                   width="100"
                   alt=""
@@ -598,7 +594,7 @@
               </div>
               <div class="slide">
                 <img
-                  src="/Images/Pioneer_Natural_Resources-Logo.wine.png"
+                  src="./Images/Pioneer_Natural_Resources-Logo.wine.png"
                   height="100"
                   width="100"
                   alt=""
@@ -606,7 +602,7 @@
               </div>
               <div class="slide">
                 <img
-                  src="/Images/pngegg.png"
+                  src="./Images/pngegg.png"
                   height="100"
                   width="100"
                   alt=""
@@ -622,7 +618,7 @@
               </div>
               <div class="slide">
                 <img
-                  src="/Images/1200px-Lundin_Energy_Logo_RGB-high-(1236x522).png"
+                  src="./Images/1200px-Lundin_Energy_Logo_RGB-high-(1236x522).png"
                   height="100"
                   width="100"
                   alt=""
