--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
 
     .dropdown-menu li {
       display: block;
-      text-align:center;
     }
 
     .dropdown-menu li a {
@@ -487,11 +486,11 @@
         <div class="who_are_we">
           Environmental Assessment & Management “EAM s.a.” is an experienced
           safety and environmental consulting company established in Tunisia
-          since 1997. <br> EAM employs professionals and has a demonstrable track
+          since 1997. <br><br> EAM employs professionals and has a demonstrable track
           record in safety, environmental and social impact assessment,
           environmental due diligence, site investigation and remediation
           services for exploration and production in oil and gas, power and
-          chemicals. <br> EAM was granted the ISO-9001: Version 2000 certification on
+          chemicals. <br> <br>EAM was granted the ISO-9001: Version 2000 certification on
           behalf of its overall commitment to quality services, provided by the
           efforts, perseverance and interest of all its personnel, and supported
           by the initiative and creative impetus of the management officers.
@@ -508,18 +507,19 @@
               <span>Shaping a Sustainable Future</span>
             </div>
           </div>
-          <div class="placeholder">
-            <img src="./Images/renewable_energy_sources-e1551858601606.jpg" alt="" />
-            <div class="description black">
-              <h4>Renewable Energies</h4>
-              <span>Empowering the Future with Clean Energy</span>
-            </div>
-          </div>
+          
           <div class="placeholder">
             <img src="./Images/offshore_platform.jpg" alt="" />
             <div class="description green">
               <h4>Oil & Gas</h4>
               <span>Fueling Progress, Energizing the World</span>
+            </div>
+          </div>
+          <div class="placeholder">
+            <img src="./Images/renewable_energy_sources-e1551858601606.jpg" alt="" />
+            <div class="description black">
+              <h4>Renewable Energies</h4>
+              <span>Empowering the Future with Clean Energy</span>
             </div>
           </div>
           <div class="placeholder">
