black green swap logo fix

--- a/index.html
+++ b/index.html
@@ -510,14 +510,14 @@
           
           <div class="placeholder">
             <img src="./Images/offshore_platform.jpg" alt="" />
-            <div class="description green">
+            <div class="description black">
               <h4>Oil & Gas</h4>
               <span>Fueling Progress, Energizing the World</span>
             </div>
           </div>
           <div class="placeholder">
             <img src="./Images/renewable_energy_sources-e1551858601606.jpg" alt="" />
-            <div class="description black">
+            <div class="description green">
               <h4>Renewable Energies</h4>
               <span>Empowering the Future with Clean Energy</span>
             </div>
@@ -563,7 +563,7 @@
               <div class="slide">
                 <img
                   src="./Images/images__2_-removebg-preview.png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
@@ -571,7 +571,7 @@
               <div class="slide">
                 <img
                   src="./Images/Eni-Logo.wine.png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
@@ -579,7 +579,7 @@
               <div class="slide">
                 <img
                   src="./Images/Marathon_Oil_Logo.svg.png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
@@ -587,7 +587,7 @@
               <div class="slide">
                 <img
                   src="./Images/petro-canada-logo-vector.png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
@@ -595,7 +595,7 @@
               <div class="slide">
                 <img
                   src="./Images/Pioneer_Natural_Resources-Logo.wine.png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
@@ -603,7 +603,7 @@
               <div class="slide">
                 <img
                   src="./Images/pngegg.png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
@@ -611,7 +611,7 @@
               <div class="slide">
                 <img
                   src="/Images/Logo_TotalEnergies.svg.png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
@@ -619,7 +619,7 @@
               <div class="slide">
                 <img
                   src="./Images/1200px-Lundin_Energy_Logo_RGB-high-(1236x522).png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
