--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
               </div>
               <div class="slide">
                 <img
-                  src="/Images/Logo_TotalEnergies.svg.png"
+                  src="./Images/Logo_TotalEnergies.svg.png"
                   height=auto
                   width="100"
                   alt=""
