--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
       text-align: center;
       font-size: 50px;
       font-weight: medium;
-      margin-bottom: 20px;
+      margin-bottom: 50px;
+      padding-bottom:20px;
     }
     h3 {
       color: black;
