--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
         overflow: hidden;
         position: relative;
         width: 950px;
+        margin-top:30px;
       }
       
       .slider::before,
