--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     ul {
       list-style: none;
+      list-style-type: none;
+      padding: 0px;
+      margin: 0px;
     }
     li {
       display: inline-block;
