--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     }
     li {
       display: inline-block;
+      list-style-type: none;
+      padding: 0px;
+      margin: 0px;
     }
     .Navbar {
       display: flex;
