--- a/index.html
+++ b/index.html
@@ -632,6 +632,14 @@
                   alt=""
                 />
               </div>
+              <div class="slide">
+                <img
+                  src="./Images/Exxon_Mobil_Logo.svg.png"
+                  height="100"
+                  width="100"
+                  alt=""
+                />
+              </div>
             </div>
           </div>
       <a href="#"><h3>See our Clients Testimonails</h3></a>
