--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
               <div class="slide">
                 <img
                   src="./Images/Exxon_Mobil_Logo.svg.png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
