--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
               <div class="slide">
                 <img
                   src="./Images/Exxon_Mobil_Logo.svg.png"
-                  height="100"
+                  height=auto
                   width="100"
                   alt=""
                 />
@@ -635,6 +635,70 @@
               <div class="slide">
                 <img
                   src="./Images/Exxon_Mobil_Logo.svg.png"
+                  height=auto
+                  width="100"
+                  alt=""
+                />
+              </div>
+               <div class="slide">
+                <img
+                  src="./Images/images__2_-removebg-preview.png"
+                  height=auto
+                  width="100"
+                  alt=""
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./Images/Eni-Logo.wine.png"
+                  height=auto
+                  width="100"
+                  alt=""
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./Images/Marathon_Oil_Logo.svg.png"
+                  height=auto
+                  width="100"
+                  alt=""
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./Images/petro-canada-logo-vector.png"
+                  height=auto
+                  width="100"
+                  alt=""
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./Images/Pioneer_Natural_Resources-Logo.wine.png"
+                  height=auto
+                  width="100"
+                  alt=""
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./Images/pngegg.png"
+                  height=auto
+                  width="100"
+                  alt=""
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./Images/Logo_TotalEnergies.svg.png"
+                  height=auto
+                  width="100"
+                  alt=""
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./Images/1200px-Lundin_Energy_Logo_RGB-high-(1236x522).png"
                   height=auto
                   width="100"
                   alt=""
