--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     </header>
 
     <div class="container" id="home-section">
-      <img src="./images/green_land.jpg" width="100%" />
+      <img src="./Images/green_land.jpg" width="100%" />
       <div class="textbox">
         <div class="actualtext">
           <h1 class="EAM">EAM</h1>
