--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       transform: scale(1.05);
     }
     h1 {
-      color: white;
+      color: #aad255;
       font-weight: bolder;
       font-size: 85px;
       margin: 0px 0px 30px 0px;
@@ -452,7 +452,7 @@
       <div class="Navbar">
         <div class="logo">
           <a href="">
-            <img src="EAM_Tunisia_logo.jpg" width="90" />
+            <img src="logo_eam.png" width="90" />
           </a>
         </div>
         <ul class="menu">
