--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.67" />
     <title>EAM Tunisia</title>
   </head>
   <style>
@@ -175,7 +175,7 @@
       position: absolute;
       top: 4%;
       left: -1000px;
-      background-color: rgba(255, 255, 255, 0.5);
+      background-color: rgba(255, 255, 255, 0.3);
       padding: 100px 300px 100px 100px;
       animation: slide-in 1s forwards;
       animation-delay: 1s;
@@ -222,12 +222,12 @@
       font-size: 50px;
       font-weight: medium;
       margin-bottom: 50px;
+      padding-top: 30px;
     }
     h3 {
       color: black;
       text-align: center;
       font-size: small;
-      margin-bottom: 0px;
       font-size: 15px;
     }
     .slideshow {
@@ -419,9 +419,7 @@
         height: 150px;
         width: 250px;
       }
-      .Contact {
-        margin-top: 60px ;
-      }
+
       .About {
         margin-top: 0px;
       }
@@ -453,7 +451,7 @@
     <header>
       <div class="Navbar">
         <div class="logo">
-          <a href="">
+          <a href="index.html">
             <img src="logo_eam.png" width="90" />
           </a>
         </div>
@@ -472,7 +470,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#projects-section">Projects</a>
+            <a href="projects.html">Projects</a>
             <ul class="dropdown-menu">
               <li><a href="#">Wind & Solar Energies</a></li>
               <li><a href="#">Harbors & Terminals</a></li>
@@ -480,7 +478,7 @@
               <li><a href="#">Hazard & Safety</a></li>
               <li><a href="#">Risk Assessment & Contaminated Sites Management</a></li>
               <li><a href="#">Social Projects</a></li>
-              <li><a href="#"><u>Other Projects</u></a></li>
+              <li><a href="projects.html"><u>Other Projects</u></a></li>
             </ul>
           </li>
           <li class="ilink"><a href="#clients-section">Clients</a></li>
@@ -527,7 +525,7 @@
           </div>
       </div>
       <div class="services" id="services-section">
-        <h2>Our Services</h2>
+        <a href="services.html"><h2>Our Services</h2></a>
         <h3>Discover our Expertise</h3>
         <div class="slideshow">
           <div class="placeholder">
@@ -728,11 +726,10 @@
               </div>
             </div>
           </div>
-      <a href="#"><h3>See our Clients Testimonails</h3></a>
     </div>
     <div class="Contact" id="contact-section">
       <h2>Contact Us</h2>
-      <form action="/submit-form" method="POST">
+      <form action="form.php" method="POST">
         <label for="name">Name</label>
         <input
           type="text"
