--- a/projects.html
+++ b/projects.html
@@ -341,15 +341,15 @@
     <header>
       <div class="Navbar" id="nv">
         <div class="logo">
-          <a href="">
+          <a href="index.html">
             <img src="logo_eam.png" width="90" />
           </a>
         </div>
         <ul class="menu">
-          <li class="ilink"><a href="#home-section">Home</a></li>
-          <li class="ilink"><a href="#about-section">About</a></li>
+          <li class="ilink"><a href="index.html#home-section">Home</a></li>
+          <li class="ilink"><a href="index.html#about-section">About</a></li>
           <li class="dropdown">
-            <a href="#services-section">Services</a>
+            <a href="services.html">Services</a>
             <ul class="dropdown-menu">
               <li>
                 <a href="#"
@@ -364,7 +364,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#projects-section">Projects</a>
+            <a href="projects.html">Projects</a>
             <ul class="dropdown-menu">
               <li><a href="#">Wind & Solar Energies</a></li>
               <li><a href="#">Harbors & Terminals</a></li>
@@ -375,12 +375,12 @@
               </li>
               <li><a href="#">Social Projects</a></li>
               <li>
-                <a href="#"><u>Other Projects</u></a>
+                <a href="projects.html"><u>Other Projects</u></a>
               </li>
             </ul>
           </li>
-          <li class="ilink"><a href="#clients-section">Clients</a></li>
-          <li class="ilink"><a href="#contact-section">Contact</a></li>
+          <li class="ilink"><a href="index.html#clients-section">Clients</a></li>
+          <li class="ilink"><a href="index.html#contact-section">Contact</a></li>
         </ul>
       </div>
     </header>
