--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="english">
   <head>
-    <title>exported project</title>
+    <title>Projects</title>
     <meta name="viewport" content="width=100%, initial-scale=0.67" />
     <meta charset="utf-8" />
 
